Bug 492560: Prevent modal dialogs from making the slow-script dialog coming up. r/sr=mrbkap